Added different kind of API

--- a/lib.urp.in
+++ b/lib.urp.in
@@ -3,6 +3,10 @@ link src/c/curl.o
 include src/c/curl.h
 ffi src/ur/curlFfi
 effectful CurlFfi.post
+beningEffectful CurlFfi.mkCurl
+beningEffectful CurlFfi.addHeader
+beningEffectful CurlFfi.setUserPwd
+effectful CurlFfi.run
 
 #$/json
 $/char
